--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,39 +6,147 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
+
 </head>
 
-<body>
+<body onload="init()">
 
-    
+    <header id="header">
+
+    </header>
+
+    <nav id="navbar">
+
+    </nav>
+
+    <main id="content">
+        <button id="connect">Connect Wallet</button>
+        <section id="graph" style="width: 100%; height: 100%">
+
+        </section>
+
+        <aside>
+
+        </aside>
+
+        <footer>
+
+        </footer>
+
+        <script src="/js/echarts.min.js"></script>
+        <script src="/js/echarts.simple.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+        <script src="/js/wallet.js"></script>
+        <script src="js/ejs.min.js"></script>
+        <script src="js/views.min.js"></script>
+        <script>
+            let head = document.querySelector('head');
+            head.innerHTML += ejs.src_views_includes_head({ title: 'S.A.N.D' });
+
+            let header = document.querySelector('header');
+            header.innerHTML += ejs.src_views_header();
+
+            let nav = document.querySelector('nav');
+            nav.innerHTML += ejs.src_views_includes_navbar();
+
+            let main = document.querySelector('main');
+            main.innerHTML += ejs.src_views_discover();
+
+            let aside = document.querySelector('aside');
+            aside.innerHTML += ejs.src_views_includes_aside_closed();
+
+            let footer = document.querySelector('footer');
+            footer.innerHTML += ejs.src_views_includes_footer();
+
+        </script>
+        <script>
+            let web3;
+            function init() {
+
+                let graphContainer = document.getElementById('graph')
+
+                var myChart = echarts.init(graphContainer, 'dark');
+                var option;
+                option = {
+                    xAxis: {
+                        type: 'category',
+                        data: [
+                            0, 1, 2, 3, 4, 5, 6, 7, 8,
+                            9, 10, 11, 12, 13, 14, 15, 16, 17,
+                            18, 19, 20, 21, 22, 23, 24, 25, 26,
+                            27, 28, 29
+                        ]
+                    },
+                    yAxis: {
+                        type: 'value'
+                    },
+                    series: [
+                        {
+                            data: [
+                                172.71, 218.44909999999996,
+                                136.37775285714287, 71.3022,
+                                80.30675000000001, 87.64,
+                                239.87030000000001, 214.02100000000002,
+                                173.3443, 188.51900000000003,
+                                264.94106942069004, 499.59668999999997,
+                                306.88460000000003, 1124.4106000000006,
+                                439.71420000000006, 140.72549999999998,
+                                89.48, 133.2808,
+                                94.986, 114.3365,
+                                135.799, 206.94459999999998,
+                                156.48479999999998, 69.58,
+                                54.21000000000001, 107.80550000000001,
+                                98.0568, 180.95900000000006,
+                                139.58990000000003, 127.4852572380754
+                            ],
+                            type: 'bar',
+                            showBackground: true,
+                            backgroundStyle: {
+                                color: 'rgba(180, 180, 180, 0.2)'
+                            }
+                        },
 
 
 
+                        {
+                            data: [
+                                172.71, 218.44909999999996,
+                                136.37775285714287, 71.3022,
+                                80.30675000000001, 87.64,
+                                239.87030000000001, 214.02100000000002,
+                                173.3443, 188.51900000000003,
+                                264.94106942069004, 499.59668999999997,
+                                306.88460000000003, 1124.4106000000006,
+                                439.71420000000006, 140.72549999999998,
+                                89.48, 133.2808,
+                                94.986, 114.3365,
+                                135.799, 206.94459999999998,
+                                156.48479999999998, 69.58,
+                                54.21000000000001, 107.80550000000001,
+                                98.0568, 180.95900000000006,
+                                139.58990000000003, 127.4852572380754
+                            ],
+                            type: 'line'
+                        }
+
+                    ]
+                };
 
 
+                if (option && typeof option === 'object') {
+                    myChart.setOption(option);
+                }
 
-    <footer>
-        <img src="/images/nft.png" alt="s.a.n.d logo" id='logo'>
-        <p class='copyright'>&copy; S.A.N.D Copyright.</p>
-        <a href="/terms">Terms And Conditions.</a>
-        <a href="/privacy">Privacy Policy</a>
-        </p>
-        <div class="social">
+                document.getElementById('connect').onclick = async () => {
+                    web3 = await connectWeb3()
+                    if (web3)
+                        document.getElementById('connected_indicator').classList.add('online')
+                };
+            }
 
-            <a href="facebook"><img src="/images/facebook.png" alt="facebook logo"></a>
-            <a href="twitter"><img src="/images/twitter.png" alt="twitter logo"></a>
-            <a href="instagram"><img src="/images/instagram.png" alt="instagram logo"></a>
-        </div>
-    </footer>
-    <script src="js/ejs.min.js"></script>
-    <script src="js/views.min.js"></script>
-    <script>
-        let head = document.querySelector('head');
-        console.log(ejs)
-        head.innerHTML += ejs.src_views_includes_head({ title: 'S.A.N.D' });
 
-    </script>
+        </script>
+
 </body>
 
 </html>
