--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,11 +20,10 @@
     </nav>
 
     <main id="content">
-        <button id="connect">Connect Wallet</button>
         <section id="graph" style="width: 100%; height: 100%">
 
         </section>
-
+    </main>
         <aside>
 
         </aside>
@@ -37,8 +36,9 @@
         <script src="/js/echarts.simple.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
         <script src="/js/wallet.js"></script>
-        <script src="js/ejs.min.js"></script>
-        <script src="js/views.min.js"></script>
+        <script src="/js/ejs.min.js"></script>
+        <script src="/js/views.min.js"></script>
+        <script src="/js/routes.js"></script>
         <script>
             let head = document.querySelector('head');
             head.innerHTML += ejs.src_views_includes_head({ title: 'S.A.N.D' });
@@ -137,11 +137,20 @@
                     myChart.setOption(option);
                 }
 
-                document.getElementById('connect').onclick = async () => {
+                document.getElementById('wallet').onclick = async () => {
                     web3 = await connectWeb3()
                     if (web3)
                         document.getElementById('connected_indicator').classList.add('online')
                 };
+
+                document.querySelectorAll("nav a").forEach(a => {
+                    console.log(a);
+                    a.addEventListener("click", (event) => {
+                        event.preventDefault();
+                        event.stopPropagation();
+                        linkClick(event.currentTarget.href);
+                    })
+                })
             }
 
 
