--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,6 +32,8 @@
 
         </footer>
 
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/client.js"></script>
         <script src="/js/echarts.min.js"></script>
         <script src="/js/echarts.simple.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
