Modified routes and discover methods to make it fetch real collections

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -53,8 +53,8 @@
         let nav = document.querySelector('nav');
         nav.innerHTML += ejs.src_views_includes_navbar();
 
-        let main = document.querySelector('main');
-        main.innerHTML += ejs.src_views_discover();
+        // let main = document.querySelector('main');
+        // main.innerHTML += ejs.src_views_discover();
 
         let aside = document.querySelector('aside');
         aside.innerHTML += ejs.src_views_includes_aside_closed();
