Updated sockets to work with tracking

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -69,7 +69,7 @@
         const graphContainer = document.getElementById('graph')
         const myChart = echarts.init(graphContainer);
         function init() {
-
+           
             // to modify to get data from form in html page
             
             document.querySelector('button#settings').onclick = () => {
@@ -105,7 +105,7 @@
                 })
             })
 
-            getBarGraph()
+            //getBarGraph()
         }
 
         function getBarGraph() {
