--- a/src/public/index.html
+++ b/src/public/index.html
@@ -111,7 +111,7 @@
         function getBarGraph() {
             document.getElementById("graph").style.backgroundImage = "url(/images/loading.gif)";
 
-            fetch('/graph/data?chart=dailyVolume&slug=doodles-official&time=7')
+            fetch('/graph/data?chart=scatter&slug=cool-cats-nft&time=30')
                 .then(res => res.json())
                 .then(option => {
                     document.getElementById("graph").style.backgroundImage = 'none';
